--- a/theme_niboo/views/assets.xml
+++ b/theme_niboo/views/assets.xml
@@ -1,4 +1,32 @@
-<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <template id="_assets_primary_variables" inherit_id="website._assets_primary_variables" priority="1">
+        <xpath expr="//link[last()]" position="after">
+            <link rel="stylesheet" type="text/scss" href="/theme_niboo/static/src/scss/primary_variables.scss"/>
+        </xpath>
+    </template>
+    <template id="_assets_secondary_variables" inherit_id="website._assets_secondary_variables" priority="1">
+        <xpath expr="//link" position="before">
+            <link rel="stylesheet" type="text/scss" href="/theme_niboo/static/src/scss/secondary_variables.scss"/>
+        </xpath>
+    </template>
 
+    <template id="assets_frontend" inherit_id="website.assets_frontend" name="Website Assets">
+        <xpath expr="//link[last()]" position="after">
+            <link rel="stylesheet" type="text/scss" href="/theme_niboo/static/src/scss/main.scss"/>
+        </xpath>
+        <xpath expr="//script[last()]" position="after">
+          <!-- coming from https://gist.githubusercontent.com/mrdoob/ -->
+          <script type="text/javascript" src="/theme_niboo/static/lib/ImprovedNoise.js"/>
+          <script type="text/javascript" src="/theme_niboo/static/lib/three.js"/>
+        </xpath>
+    </template>
+
+
+<template id="assets_wysiwyg" inherit_id="website.assets_wysiwyg" name="Website Editor Assets (used in website editor)">
+  <xpath expr="//script[last()]" position="after">
+  <script type="text/javascript" src="/theme_niboo/static/src/js/snippet.editor.js"/>
+  </xpath>
+
+</template>
 </odoo>
