--- a/theme_niboo/static/src/scss/primary_variables.scss
+++ b/theme_niboo/static/src/scss/primary_variables.scss
@@ -1,9 +1,9 @@
 // Theme Palettes
 $o-color-palettes: (
     (
-        'o-color-1': #ee4980,
-        'o-color-2': #5f5458,
-        'o-color-3': #f7f7f7,
+        'o-color-1':#29274C,
+        'o-color-2':  #012A36,
+        'o-color-3': #7E52A0,
         'o-color-4': #FFFFFF,
         'o-color-5': #000000,
 
