--- a/theme_niboo/static/src/scss/secondary_variables.scss
+++ b/theme_niboo/static/src/scss/secondary_variables.scss
@@ -2,3 +2,10 @@
 //------------------------------------------------------------------------------
 // Secondary Variables
 //------------------------------------------------------------------------------
+@mixin text-3d($hue) {
+  $ts: ();
+  @for $i from 1 through 10 {
+    $ts: $ts, $i*2px $i*2px hsl($hue + $i*1, 100%, 50% - $i);
+  }
+  text-shadow: $ts, 0 0 10px, 0 0 10px;
+}
